--- a/tags.html
+++ b/tags.html
@@ -120,4 +120,32 @@
               &lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;
             </code>
           </td>
-          <td><img src="https://bit.ly/1MZAFu
+          <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+        </tr>
+        <tr>
+          <td><code><span>code</span></code></td>
+          <td>code</td>
+          <td>format as source code</td>
+          <td>
+            <code>
+              &lt;code&gt;table&lt;/code&gt;
+            </code>
+          </td>
+          <td>table</td>
+        </tr>
+      </table>
+
+      <ol>My favorite colors</ol>
+        <li>blue</li>
+        <li>green</li>
+        <li>red</li>
+
+      <ul>My favorite shapes</ul>
+        <li>square</li>
+        <li>circle</li>
+        <li>hexagon</li>
+
+    </div>
+
+  </body>
+</html>
