Add Navigation Styling

--- a/tags.html
+++ b/tags.html
@@ -6,11 +6,12 @@
   </head>
   <body>
 
-    <div>
-     <a href="index.html">Home</a>
-     <a href="tags.html">HTML Tags</a>
-     <a href="moby_dick.html">Moby Dick</a> 
+    <div style="text-align: right;">
+      <a href="index.html" style="color: blue; text-decoration: none;">Home</a>
+      <a href="tags.html" style="color: blue; text-decoration: none; margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="color: blue; text-decoration: none; margin-left: 10px;">Moby Dick</a>
     </div>
+
 
     <header>
       <h1>Important HTML tags</h1>
@@ -141,17 +142,103 @@
         </tr>
       </table>
 
-      <ol>My favorite colors</ol>
+      <header>
+        <h2>My favorite colors</h2>
+      </header>
+
+      <ol></ol>
         <li>blue</li>
         <li>green</li>
         <li>red</li>
 
-      <ul>My favorite shapes</ul>
+      <header>
+        <h2>My favorite shapes</h2>
+      </header>
+
+      <ul></ul>
         <li>square</li>
         <li>circle</li>
         <li>hexagon</li>
 
     </div>
+
+<div>
+
+  <header>
+        <h2>Document Tags</h2>
+      </header>
+
+    <table>
+  <tr>
+    <th>Tag</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <td>html</td>
+    <td>The root element of an HTML document</td>
+  </tr>
+  <tr>
+    <td>head</td>
+    <td>Contains meta-information about the document</td>
+  </tr>
+  <tr>
+    <td>body</td>
+    <td>Contains the content of the document</td>
+  </tr>
+  <tr>
+    <td>title</td>
+    <td>Specifies the title of the document</td>
+  </tr>
+  <tr>
+    <td>meta</td>
+    <td>Specifies metadata about the HTML document</td>
+  </tr>
+</table>
+
+</div>
+
+<div>
+  <header>
+    <h2>Other Tags</h2>
+  </header>
+
+  <table>
+    <tr>
+      <th>Tag</th>
+      <th>Description</th>
+    </tr>
+    <tr>
+      <td>&lt;main&gt;</td>
+      <td>Specifies the main content of the document.</td>
+    </tr>
+    <tr>
+      <td>&lt;footer&gt;</td>
+      <td>Defines a footer for a document or section.</td>
+    </tr>
+    <tr>
+      <td>&lt;section&gt;</td>
+      <td>Defines a section in a document.</td>
+    </tr>
+    <tr>
+      <td>&lt;article&gt;</td>
+      <td>Specifies independent, self-contained content.</td>
+    </tr>
+    <tr>
+      <td>&lt;nav&gt;</td>
+      <td>Defines navigation links.</td>
+    </tr>
+    <tr>
+      <td>&lt;aside&gt;</td>
+      <td>Defines content aside from the content it is placed in (like a sidebar).</td>
+    </tr>
+    <tr>
+      <td>&lt;header&gt;</td>
+      <td>Represents a container for introductory content or a set of navigational links.</td>
+    </tr>
+  </table>
+</div>
+
+
 
   </body>
 </html>
