--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,11 +6,12 @@
   </head>
   <body>
 
-  	<div>
-     <a href="index.html">Home</a>
-     <a href="tags.html">HTML Tags</a>
-     <a href="moby_dick.html">Moby Dick</a> 
+    <div style="text-align: right;">
+      <a href="index.html" style="color: blue; text-decoration: none;">Home</a>
+      <a href="tags.html" style="color: blue; text-decoration: none; margin-left: 10px;">HTML Tags</a>
+      <a href="moby_dick.html" style="color: blue; text-decoration: none; margin-left: 10px;">Moby Dick</a>
     </div>
+
 
   <header style="text-align: center; margin: 0 0 80px;">
       <h1>A Softcover Book Report</h1>
